[package]
name = "gerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello"
path = "hello/src/main.rs"
test = false
bench = false


[dependencies]
hello_macro = { path = "hello_macro" }
hello_macro_derive = { path = "hello_macro_derive" }
hello = { path = "hello" }

docker-compose-types = "0.2.0"
serde = "1.0"
serde_yaml = "0.9"
quote = "1.0.21"