[package]
name = "orange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
tracing = "0.1.34"
mini-redis = "0.4.1"
atoi = "2.0.0"
